@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.13.8
+VERSION=1.13.9
 
 DEPENDENCY="zeda=1.7.7;zm=1.7.3"
 
